# affiliate-html-maker

./: .env  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  main.py
app/routers/: download.py  htmx.py  pages.py
app/schemas/: product.py  section.py
app/services/: __init__.py  amazon_link_builder.py  chatgpt_image_bundle.py  chatgpt_json_parser.py  email_parser.py  html_builder.py  image_mail_parser.py  text_parser.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/pages/: index.html
app/templates/partials/: download_button.html  error.html  preview.html  warning.html
sample/: costco_coupon_from_text_same_structure.html  sample_info.txt
tests/: conftest.py  test_chatgpt_image_bundle.py  test_chatgpt_json_parser.py  test_email_parser.py  test_endpoints.py  test_html_builder.py  test_image_mail_parser.py  test_text_parser.py
