[project]
name = "affiliate-html-maker"
version = "0.1.0"
description = "Generate affiliate-ready product list HTML from pasted text."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.110,<1.0",
  "jinja2>=3.1,<4.0",
  "pillow>=10.4.0",
  "pytesseract>=0.3.13",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.24,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=6.2,<9.0",
  "ruff>=0.4,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
